[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Katelyn"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
Django = "^4.0.6"
dj-database-url = "^1.0.0"
Babel = "^2.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
